src/test/ui/error-codes/E0301.stderr
error[E0301]: cannot mutably borrow in a pattern guard
  --> $DIR/E0301.rs:14:19
   |
14 |         option if option.take().is_none() => {}, //~ ERROR E0301
   |                   ^^^^^^ borrowed mutably in pattern guard

error: aborting due to previous error

